--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://guhub.cn']
+custom: ['https://guhub.cn','https://www.angelic47.com/']
