🐣 Add: 添加俩新的演示站，同时删除一个无法访问链接

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://guhub.cn','https://www.angelic47.com/','https://www.xmanweb.tk/']
+custom: ['https://guhub.cn','https://www.angelic47.com/','https://www.xmanweb.tk/','https://blog.fksoft.top/']
