--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,16 @@
         "projectManagement",
         "doc"
       ]
+    },
+    {
+      "login": "outtimes",
+      "name": "时光",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8336596?v=4",
+      "profile": "https://timewk.cn",
+      "contributions": [
+        "code",
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
